# pokedings

./: .gitignore  Cargo.toml  README.md
assets/graphics/tilesets/: ancient_forest_decorative.tsx  ancient_forest_main.tsx  camp_graves.tsx  castle_decorative.tsx  castle_interriors.tsx  castle_outside.tsx  castle_outside_shadows.tsx  decorative_fence.tsx  decorative_props.tsx  decorative_props_2.tsx  deep_cave_decorative.tsx  deep_cave_main.tsx  desert_buildings_decorative.tsx  desert_buildings_furnitures.tsx  desert_buildings_interriors.tsx  desert_buildings_interriors_2.tsx  desert_buildings_main.tsx  desert_buildings_main_2.tsx  desert_buildings_main_3.tsx  desert_buildings_main_shadows.tsx  desert_buildings_main_shadows_2.tsx  desert_buildings_main_shadows_3.tsx  desert_buildings_small_obj.tsx  desert_decorative.tsx  desert_decorative_2.tsx  desert_main.tsx  grassland_decorative.tsx  grassland_decorative_no_grass.tsx  grassland_main.tsx  grassland_main_autotiling.tsx  harbor.tsx  houses_furnitures.tsx  houses_interriors.tsx  houses_outside.tsx  houses_outside_shadows.tsx  houses_smallobj.tsx  marshland_decorative.tsx  marshland_main.tsx  mountains_decorative.tsx  mountains_main.tsx  (+13 more)
assets/maps/: tutorial.tmx
src/: camera.rs  debug.rs  main.rs  player.rs
src/helper/: tiled.rs
story/: README.md
tiled/: tutorial.tiled-project
